# ncaam_processor

./: .claudeignore  .gitignore  Basketball_Stats.html.backup  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
basketball_processor/: __init__.py  __main__.py  main.py
data/: conference_history.json  conference_refresh_timestamp.txt  d2_conferences.json  d3_conferences.json  d3_conferences_2011_12.json  d3_conferences_2012_13.json  d3_conferences_2024_25.json  draft_backfill_timestamp.txt  nba_confirmed.json  pending_games.json  pro_refresh_timestamp.txt  proballers_ncaa_teams.json  realgm_transfers.json  schedule_cache.json  schedule_cache_womens.json  school_conference_history.json  team_logos.json  wnba_recheck_timestamp.txt
docs/: app.js  data.js  geo-data.js  index.html  styles.css
html_games/: 2026-02-04-22-san-francisco.html  Air Force vs. San Jose State Box Score (Men), February 1, 2025 _ College Basketball at Sports-Reference.com.html  Boise State vs. San Francisco Box Score (Women), November 21, 2024 _ College Basketball at Sports-Reference.com.html  California Baptist vs. Grand Canyon Box Score (Men), February 22, 2025 _ College Basketball at Sports-Reference.com.html  California vs. Stanford Box Score (Men), January 24, 2026 _ College Basketball at Sports-Reference.com.html  Clemson vs. California Box Score (Men), February 7, 2026 _ College Basketball at Sports-Reference.com.html  Clemson vs. Virginia Box Score (Men), January 23, 2018 _ College Basketball at Sports-Reference.com.html  Drexel vs. Towson Box Score (Men), January 31, 2009 _ College Basketball at Sports-Reference.com.html  Duke vs. California Box Score (Men), January 14, 2026 _ College Basketball at Sports-Reference.com.html  (+57 more)
(+65 files in other folders)
